--- a/demo/package.json
+++ b/demo/package.json
@@ -4,7 +4,7 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "net.dropdeliver.Drop",
+    "id": "org.nativescript.demo",
     "tns-android": {
       "version": "3.2.0"
     },
