--- a/demo-angular/tsconfig.json
+++ b/demo-angular/tsconfig.json
@@ -2,16 +2,14 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "noImplicitAny": false,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "declaration": true,
-        "noLib": false,
-        "noEmitHelpers": true,
         "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "noEmitHelpers": true,
+        "noEmitOnError": true,
         "lib": [
             "es6",
-            "dom"
+            "dom",
+            "es2015.iterable"
         ],
         "baseUrl": ".",
         "paths": {
@@ -22,9 +20,8 @@
         }
     },
     "exclude": [
-        "**/*.aot.ts",
         "node_modules",
         "platforms",
-        "demo"
+        "**/*.aot.ts"
     ]
 }
