--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nativescript-stripe",
+  "name": "nativescript-stripe2",
   "version": "1.0.0",
   "description": "",
   "main": "stripe",
