--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-stripe2",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "stripe",
   "nativescript": {
@@ -18,13 +18,13 @@
     "test.ios": "cd demo && tns test ios --emulator",
     "test.ios.device": "cd demo && tns test ios",
     "test.android": "cd demo && tns test android",
-    "preparedemo": "npm run build && cd demo && tns plugin remove nativescript-stripe && tns plugin add .. && tns install",
-    "preparedemoangular": "npm run build && cd demo-angular && tns plugin remove nativescript-stripe && tns plugin add .. && tns install",
+    "preparedemo": "npm run build && cd demo && tns plugin remove nativescript-stripe2 && tns plugin add .. && tns install",
+    "preparedemoangular": "npm run build && cd demo-angular && tns plugin remove nativescript-stripe2 && tns plugin add .. && tns install",
     "setup": "npm i && cd demo && npm i && cd .. && npm run build && cd demo && tns plugin add .. && cd .."
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chrissantosproduction/nativescript-stripe.git"
+    "url": "https://github.com/chrissantosproduction/nativescript-stripe2.git"
   },
   "keywords": [
     "NativeScript",
@@ -37,10 +37,10 @@
     "email": "chrissantosproduction@gmail.com"
   },
   "bugs": {
-    "url": "https://github.com/triniwiz/nativescript-stripe/issues"
+    "url": "https://github.com/chrissantosproduction/nativescript-stripe2/issues"
   },
   "license": "MIT",
-  "homepage": "https://github.com/triniwiz/nativescript-stripe",
+  "homepage": "https://github.com/chrissantosproduction/nativescript-stripe2",
   "readmeFilename": "README.md",
   "devDependencies": {
     "tns-core-modules": "^3.3.0",
@@ -60,7 +60,6 @@
     "nativescript-dev-typescript": "~0.5.0"
   },
   "dependencies": {
-    "nativescript": "^3.3.0"
   },
   "peerDependencies": {
     "tns-core-modules": "^3.2.0"
