--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nativescript-stripe2",
+  "name": "nativescript-stripe-sdk",
   "version": "1.0.1",
   "description": "",
   "main": "stripe",
@@ -18,13 +18,13 @@
     "test.ios": "cd demo && tns test ios --emulator",
     "test.ios.device": "cd demo && tns test ios",
     "test.android": "cd demo && tns test android",
-    "preparedemo": "npm run build && cd demo && tns plugin remove nativescript-stripe2 && tns plugin add .. && tns install",
-    "preparedemoangular": "npm run build && cd demo-angular && tns plugin remove nativescript-stripe2 && tns plugin add .. && tns install",
+    "preparedemo": "npm run build && cd demo && tns plugin remove nativescript-stripe-sdk && tns plugin add .. && tns install",
+    "preparedemoangular": "npm run build && cd demo-angular && tns plugin remove nativescript-stripe-sdk && tns plugin add .. && tns install",
     "setup": "npm i && cd demo && npm i && cd .. && npm run build && cd demo && tns plugin add .. && cd .."
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chrissantosproduction/nativescript-stripe2.git"
+    "url": "https://github.com/chrissantosproduction/nativescript-stripe-sdk.git"
   },
   "keywords": [
     "NativeScript",
@@ -37,10 +37,10 @@
     "email": "chrissantosproduction@gmail.com"
   },
   "bugs": {
-    "url": "https://github.com/chrissantosproduction/nativescript-stripe2/issues"
+    "url": "https://github.com/chrissantosproduction/nativescript-stripe-sdk/issues"
   },
   "license": "MIT",
-  "homepage": "https://github.com/chrissantosproduction/nativescript-stripe2",
+  "homepage": "https://github.com/chrissantosproduction/nativescript-stripe-sdk",
   "readmeFilename": "README.md",
   "devDependencies": {
     "tns-core-modules": "^3.3.0",
