Formatting, bump to android-stripe:6.1.2, ios-stripe:11.5.0, will update iOS to latest soon

--- a/demo-angular/app/App_Resources/Android/app.gradle
+++ b/demo-angular/app/App_Resources/Android/app.gradle
@@ -19,3 +19,9 @@ repositories {
     url "https://maven.google.com"
   }
 }
+def settingsGradlePath = "$rootDir/../../app/App_Resources/Android/settings.gradle";
+def settingsGradleFile = new File(settingsGradlePath);
+if(settingsGradleFile.exists())
+{
+    apply from: settingsGradleFile;
+}
